fix: resolved horizontal scrollbar bug

--- a/mdi-react/src/App.scss
+++ b/mdi-react/src/App.scss
@@ -1,14 +1,15 @@
 @use "./styles/colors.scss" as *;
 @use "./styles/fonts.scss" as *;
 
-
 @media only screen and (min-width: 810px) {
   #root {
-    max-width: 2500px;
+    max-width: 2100px;
+    width: 100%;
+    margin: 0 auto;
     min-height: 0;
     display: grid;
     grid-template-rows: auto auto auto;
-    grid-template-columns: 100vw;
+    // grid-template-columns: 100vw;   //This was causing horizontal scroll bar!
     min-height: 100vh;
     grid-template-areas:
       "header"
